<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="4dp"
    android:paddingLeft="10dp">
    <ImageView
        android:id="@+id/image_app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/label_app_icon"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:scaleType="fitCenter"
        android:src="@android:drawable/sym_def_app_icon" />
    <TextView
        android:id="@+id/text_app_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image_app_icon"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/image_app_icon"
        android:text="@string/filler_app_name"
        android:textAppearance="@style/Text.Title" />
    <TextView
        android:id="@+id/text_app_package"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_app_label"
        android:layout_below="@+id/text_app_label"
        android:layout_marginLeft="18dp"
        android:text="@string/filler_app_package"
        android:textAppearance="@style/Text.Default" />
</RelativeLayout>
